<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account</string>
    <string name="welcome_to_shoes_e_market">WELCOME TO SHOES E-MARKET</string>
    <string name="instructions">instructions</string>
    <string name="add_new_shoes_and_see_details">Add new shoes and See details</string>
    <string name="see_details_list_click_on_the_bottom_below">See details List Click on the bottom below</string>
    <string name="shoes_list">Shoes List</string>
    <string name="empty">empty</string>
    <string name="logout">Logout</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="shoes_name1">Shoes Name :</string>
    <string name="company1">Company :</string>
    <string name="shoes_size1">Shoes size :</string>
    <string name="description1">Description :</string>

    <string name="company">Company</string>
    <string name="shoes_size">Shoes size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
