<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.NewShoesFragment">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/shoes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_name_shoes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/edt_name_shoes"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv2"
            android:text="@string/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_company"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/edt_company"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv3"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/shoes_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_shoes_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/edt_shoes_size"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv4"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor,TextFields" />


        <Button
            app:layout_constraintVertical_bias="0.9"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/edt_description" />
        <Button
            android:id="@+id/btn_save"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
            app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>