<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tv1"
        app:layout_constraintRight_toLeftOf="@+id/tvNameShoes"
        android:text="@string/shoes_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvNameShoes"
        app:layout_constraintTop_toTopOf="@+id/tv1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tv2"
        app:layout_constraintRight_toLeftOf="@+id/tvCompany"
        android:text="@string/company1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvCompany"
        app:layout_constraintTop_toTopOf="@+id/tv2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tv3"
        app:layout_constraintRight_toLeftOf="@+id/tvSize"
        android:text="@string/shoes_size1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvSize"
        app:layout_constraintTop_toTopOf="@+id/tv3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tv4"
        app:layout_constraintRight_toLeftOf="@+id/tvDescription"
        android:text="@string/description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvDescription"
        app:layout_constraintTop_toTopOf="@+id/tv4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
